dump BN thread logs
Signed-off-by: Petar Tonev <petar.tonev@limechain.tech>